--- a/index.html
+++ b/index.html
@@ -12,6 +12,35 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
-        
+        <div class="sidebar">
+            SIDEBAR
+        </div>
+        <header class="header">
+            Header
+        </header>
+        <div class="realtors">
+            Top 3 Realtors
+        </div>
+        <section class="features">
+            Features
+        </section>
+        <div class="story">
+            <div class="story__pictures">
+                Story pictures
+            </div>
+            <div class="story__content">
+                Story content
+            </div>
+        </div>
+        <section class="homes">
+            homes
+        </section>
+        <section class="gallery">
+            gallery
+        </section>
+        <footer class="footer">
+            footer
+        </footer>
+
     </body>
 </html>
